@@ -21,6 +21,7 @@ Changes in version 1.3.0:
     devices to the master, which decides, which ones to register.
 * All EEPROM write operations from user space are now blocking until
   completion and returning appropriate error codes.
+* Implemented setting of secondary slave address (alias) via sysfs.
 * Removed annoying eeprom_write_enable file. EEPROM writing always enabled.
 * Removed EtherCAT line comments from 8139too drivers.
 
